--- a/styles/shared/general.css
+++ b/styles/shared/general.css
@@ -2,7 +2,9 @@ body {
     font-family: Roboto, Arial;
     color: rgb(33, 33, 33);
     margin: 0;
+    /* height:3000px; */
 }
+
 
 p {
   margin: 0;
