--- a/styles/pages/amazon.css
+++ b/styles/pages/amazon.css
@@ -118,3 +118,22 @@
     border:none;
     /* background-color: yellow; */
   }
+
+.added-to-cart{
+  opacity:0;
+  margin-bottom: 8px;
+  display: flex;
+  align-items: center;
+  color: rgb(6, 125, 98);
+  font-size: 16px;
+}
+
+.added-to-cart img {
+  height: 20px;
+  margin-right: 5px;
+}
+
+
+.added-to-cart-visible{
+  opacity: 1;
+}
