--- a/styles/pages/checkout/checkout.css
+++ b/styles/pages/checkout/checkout.css
@@ -177,3 +177,23 @@
     margin-bottom: 15px;
   }
   
+.quantity-input{
+  width:40px;
+  display:none;
+}
+
+
+.save-button{
+  display:none;
+}
+
+.is-editing-quantity .quantity-input,
+.is-editing-quantity .save-button{
+  display:initial;
+}
+
+.is-editing-quantity .quantity-label,
+.is-editing-quantity .update-quantity-link{
+display:none;
+}
+
